gitops/app-configs/codex-docs.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codex-docs-ingress
  namespace: codex-docs
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # argocd.argoproj.io/hook: Sync
    helm.sh/hook: "post-install"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.local.timmybtech.com`)
      kind: Rule
      services:
        - name: codex-docs
          port: 3000
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
